<resources>
    <string name="app_name">Tangli Music Player</string>

    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="language">Language</string>
    <string name="simplified_chinese">Simplified Chinese</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="select_language">Select language</string>
    <string name="confirm">Confirm</string>
    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <string name="user_name">Tangli</string>
    <string name="user_job">Musician</string>
    <string name="single_loop">Switched to single loop</string>
    <string name="list_loop">Switched to list loop</string>
    <string name="random_loop">Switched to random loop</string>
    <string name="share_to">Share to:</string>
    <string name="personal_description">I hope that I can take my wish on flowery way,carrying dreams at that time to go through the storm</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>

</resources>
