<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/top_area"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/close_page"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back_previous"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_share_song"/>



    </LinearLayout>



    <com.tangli.musicplayer.view.MusicCoverView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:transitionName="@string/transition_name_cover"
        app:shape="circle"
        app:trackColor="@color/transparent" />


    <LinearLayout
        android:id="@+id/ordering"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:transitionGroup="true">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:transitionName="@string/transition_name_title">

            <com.tangli.musicplayer.view.ScrollTextView
                android:id="@+id/music_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:singleLine="true"
                app:text_size="18sp"
                app:text="Ukulele Fun Background"
                app:text_color="@color/colorWhite"
                app:isScrollForever="true"
                app:speed="4"
                 />

            <TextView
                android:id="@+id/music_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PaulYudin"

                android:textSize="16sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/repeat"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:src="@drawable/ic_repeat_white_24dp"
            android:focusable="true" />


        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:src="@drawable/ic_shuffle_white_24dp"
            android:focusable="true" />

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ordering"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="10dp"
        android:max="100"
        android:min="0"
        android:thumbTint="@color/colorWhite"
        android:progressBackgroundTint="@color/lightGray"
        android:progressTint="@color/orange"
        android:transitionName="@string/transition_name_progress" />





    <Space
        android:id="@+id/timers_anchor"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/fence_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timers_anchor"
        android:layout_toStartOf="@id/timers_anchor"
        android:textSize="14sp"
        android:layout_marginStart="25dp"
        android:layout_alignParentStart="true"
        android:transitionName="@string/transition_name_time"
        android:textColor="@color/colorWhite"
        tools:text="02:30" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timers_anchor"
        android:layout_toEndOf="@id/timers_anchor"
        android:layout_marginEnd="25dp"
        android:textSize="14sp"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:transitionName="@string/transition_name_duration"
        android:textColor="@color/colorWhite"
        tools:text="04:30"/>




    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:transitionGroup="true">

        <ImageView
            android:id="@+id/previous"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous_white_24dp"/>

        <ImageView
            android:id="@+id/rewind"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fast_rewind_white_24dp"/>

        <ImageView
            android:id="@+id/switch_play_state"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_name_fab"
            android:src="@drawable/ic_pause_music"/>



        <ImageView
            android:id="@+id/forward"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fast_forward_white_24dp"/>

        <ImageView
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next_white_24dp"/>

    </LinearLayout>

</RelativeLayout>
