<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <com.tangli.musicplayer.view.MusicCoverView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/main__cover"
        android:transitionName="@string/transition_name_cover"
        app:shape="circle"
        app:trackColor="@color/transparent" />

    <include
        android:id="@+id/title"
        layout="@layout/track_title"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true" />


    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cover"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="10dp"
        android:max="100"
        android:min="0"
        android:thumbTint="@color/colorWhite"
        android:progressBackgroundTint="@color/lightGray"
        android:progressTint="@color/orange"
        android:transitionName="@string/transition_name_progress" />





    <Space
        android:id="@+id/timers_anchor"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"/>

    <TextView
        android:id="@+id/fence_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timers_anchor"
        android:layout_toStartOf="@id/timers_anchor"
        android:textSize="14sp"
        android:layout_marginStart="25dp"
        android:layout_alignParentStart="true"
        android:transitionName="@string/transition_name_time"
        android:textColor="@color/colorWhite"
        tools:text="02:30" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timers_anchor"
        android:layout_toEndOf="@id/timers_anchor"
        android:layout_marginEnd="25dp"
        android:textSize="14sp"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:transitionName="@string/transition_name_duration"
        android:textColor="@color/colorWhite"
        tools:text="04:30"/>

    <LinearLayout
        android:id="@+id/ordering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fence_time"
        android:layout_centerHorizontal="true"
        android:transitionGroup="true">

        <ImageView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_repeat_white_24dp"
            android:focusable="true" />

        <Space
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_shuffle_white_24dp"
            android:focusable="true" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:transitionGroup="true">

        <ImageView
            android:id="@+id/previous"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous_white_24dp"/>

        <ImageView
            android:id="@+id/rewind"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fast_rewind_white_24dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onFabClick"
            android:scaleType="center"
            android:src="@drawable/ic_pause_animatable"
            android:transitionName="@string/transition_name_fab"
            />

        <ImageView
            android:id="@+id/forward"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fast_forward_white_24dp"/>

        <ImageView
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next_white_24dp"/>

    </LinearLayout>

</RelativeLayout>
